kubernetes-manifest/gateway-api-spike/curlpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: curl-periodic
spec:
  containers:
  - name: curl
    image: curlimages/curl:7.84.0
    command: ["/bin/sh", "-c", "while true; do curl -s http://podinfo.default.svc.cluster.local/version; sleep 2; done;"]
  restartPolicy: OnFailure
