kubernetes-manifest/gateway-api-spike/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: podinfo-6-6-1
  namespace: default
spec:
  selector:
    app: podinfo-6-6-1
  ports:
    - protocol: TCP
      port: 9898
      targetPort: 9898
---
kind: Service
apiVersion: v1
metadata:
  name: podinfo-6-6-2
  namespace: default
spec:
  selector:
    app: podinfo-6-6-2
  ports:
    - protocol: TCP
      port: 9898
      targetPort: 9898
