kubernetes-manifest/gateway-api-spike/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: podinfo
  namespace: default
spec:
  gatewayClassName: kuma
  listeners:
  - name: http
    port: 80
    protocol: HTTP
