kubernetes-manifest/gateway-api-spike/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: podinfo
spec:
  parentRefs:
    - group: ""
      kind: Service
      name: podinfo
      port: 9898
  rules:
    - backendRefs:
      - name: podinfo-6-6-1
        port: 9898
        weight: 50
      - name: podinfo-6-6-2
        port: 9898
        weight: 50
